--- a/configs/llms/031223.yaml
+++ b/configs/llms/031223.yaml
@@ -1,3 +1,8 @@
+#  Copyright (c) VKU.NewEnergy.
+
+#  This source code is licensed under the Apache-2.0 license found in the
+#  LICENSE file in the root directory of this source tree.
+
 _type: chat_openai
 max_tokens:
 model_name: gpt-3.5-turbo-1106
